<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--drawable 오른쪽 마우스클릭 -> new -> Image Asset -> clip art -->
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home_grey"
        android:title="@string/home">
    </item>

    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search">

    </item>

    <item
        android:id="@+id/bottom_nav_wishList"
        android:icon="@drawable/vector_heart_grey"
        android:title="@string/wish_lecture">
    </item>

    <item
        android:id="@+id/bottom_nav_chat"
        android:icon="@drawable/ic_chat_bubble"
        android:title="@string/chat">
    </item>

    <item
        android:id="@+id/bottom_nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/seeMore">
    </item>

    <item
        android:id="@+id/bottom_nav_sample"
        android:icon="@drawable/ic_more"
        android:title="@string/seeMore">
    </item>
</menu>