<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saegeullee.myapplication.MoreActivity.AccountSettingActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_name"
            android:textSize="18sp"
            android:textColor="#000"
            android:id="@+id/heading"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:textColor="#000"
            android:hint="@string/please_input_name"
            android:id="@+id/inputName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_cancel"/>

    </RelativeLayout>



</RelativeLayout>