<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/white_grey_border_top_and_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chatImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/happy_woman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/chat_opponent_name"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/chat_opponent_name"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/chatImage"
        app:layout_constraintTop_toTopOf="@+id/chatImage" />

    <TextView
        android:id="@+id/chat_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/chatroom_date_example"
        app:layout_constraintBottom_toBottomOf="@+id/chat_opponent_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chat_opponent_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView

        android:id="@+id/chat_last_message"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/chat_list_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chatImage"
        app:layout_constraintTop_toBottomOf="@+id/course_title" />

    <TextView
        android:id="@+id/course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/course_title"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/chatImage"
        app:layout_constraintTop_toBottomOf="@+id/chat_opponent_name" />


</android.support.constraint.ConstraintLayout>