<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/white_grey_border_top_and_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/happy_woman"
        android:id="@+id/courseTutorImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tutorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/tutor_name"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/courseTutorImage"
        app:layout_constraintTop_toTopOf="@+id/courseTutorImage" />

    <TextView
        android:id="@+id/courseEnrolledDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/date_sample"
        app:layout_constraintStart_toEndOf="@+id/courseTutorImage"
        app:layout_constraintTop_toBottomOf="@+id/tutorName" />

    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_title"
        android:textColor="@color/Black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTutorImage" />

</android.support.constraint.ConstraintLayout>